Fixed horizontal scroll

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,6 +15,7 @@ $base-color: #e7434e;
 
 body {
     font-size: 10px;
+    overflow-x: hidden;
 }
 
 a {
